# scrapedict

./: .gitignore  Makefile  README.md  pyproject.toml  scrapedict.py  test_scrapedict.py  tox.ini
scrapedict/: __init__.py
tests/: test_scrapedict.py
