[tool.poetry]
name = "scrapedict"
version = "0.3.0"
description = "Scrape HTML to dictionaries"
authors = ["Pedro Rodrigues <medecau@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/medecau/scrapedict"

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.4"
parse = "^1.18"
ftfy = "^6.1.1"
normality = "^2.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1"
pytest-markdown-docs = "^0.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
