[project]
name = "scrapedict"
version = "0.3.1"
description = "Scrape HTML to dictionaries"
readme = "README.md"
requires-python = "<4.0,>=3.8"
dependencies = [
    "beautifulsoup4<5.0,>=4.4",
    "parse<2.0,>=1.18",
    "ftfy<7.0.0,>=6.1.1",
    "normality<3.0.0,>=2.5.0",
]
authors = [
    {name = "Pedro Rodrigues", email = "me@pdbr.org"},
]

[dependency-groups]
dev = [
    "pytest<9.0.0,>=8.0.2",
    "pytest-markdown-docs<1.0.0,>=0.4.3",
]

[project.urls]
homepage = "https://github.com/medecau/scrapedict"

[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[tool.tox]
requires = ["tox>=4.19"]
env_list = ["3.13", "3.8", "doctest", "lint"]

[tool.tox.env_run_base]
description = "Run test under {base_python}"
deps = ["pytest"]
commands = [["pytest"]]

[tool.tox.env.doctest]
description = "Run doctests"
deps = ["pytest", "pytest-markdown-docs"]
commands = [["pytest", "--markdown-docs"]]

[tool.tox.env.lint]
description = "Run linters"
deps = ["ruff"]
commands = [
    ["ruff", "check", "."],
    ["ruff", "format", "--check", "."],
]
